# agentty

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  install.sh
.github/workflows/: ci.yml  docs-site.yml  release.yml
book/: main.tex  maya-book.aux  maya-book.out  maya-book.toc  preamble.tex
cmake/: assert_static_pie.cmake
docs/: ARCHITECTURE.md  DESIGN.md  DISTRIBUTION.md  INLINE_SCROLLBACK.md  RENDERING.md  RUN_CODE_BLOCK.md  RUST-CRITIQUE.md  UI.md  WHY-NOT-RUST.md  auth.md  corruption-analysis.md  frozen-row.listing  frozen-row.tex  scrollback-book.ms
docs/design/: memory.md  (+2 more)
packaging/: README.md
scripts/: acp_methods_test.py  acp_smoke.py  bump.sh  gen_demo_frames.py  gen_demo_gif.sh  gen_demo_svg.py  install.sh  release.sh
src/: anthropic.cpp  auth.cpp  diff.cpp  main.cpp  persistence.cpp  tools.cpp
tests/: acp_integration_test.cpp  anthropic_md_stream.cpp  composer_edit_test.cpp  doom_loop_test.cpp  edit_turn_cpu_probe.cpp  knowledge_test.cpp  long_session_bench.cpp  mcp_bridge_test.cpp  midrun_freeze_test.cpp  midrun_seam_test.cpp  midrun_wire_test.cpp  model_caps_test.cpp  o1_probe.cpp  ollama_transport_test.cpp  openai_transport_test.cpp  param_tag_repair_test.cpp  persistence_proactive_test.cpp  proactive_deferred_test.cpp  rag_advanced_test.cpp  rag_expand_test.cpp  rag_hnsw_test.cpp  rag_rerank_test.cpp  rag_test.cpp  read_grep_features_test.cpp  realthread_probe.cpp  reducer_tests.cpp  reveal_drain_integration_test.cpp  reveal_freeze_gate_probe.cpp  reveal_pacing_test.cpp  reveal_scrollback_test.cpp  salvage_dedup_test.cpp  scheduler_path_test.cpp  scrollback_oracle_test.cpp  scrollback_prefix_harness.cpp  scrollback_wire_fuzz.cpp  settings_default_test.cpp  skills_engine_test.cpp  stream_cpu_probe.cpp  stream_liveness_test.cpp  stream_md_lag_test.cpp  (+4 more)
(+552 files in other folders)
